<resources>
    <string name="app_name">FieldGlass</string>
    <string name="greateful_text">Show me thre way</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">Don\'t have an account? </string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Name</string>
    <string name="title">Menu</string>
    <string name="signout">Log Out</string>
    <string name="home">Home</string>
    <string name="your_details">Your Details</string>
    <string name="title_activity_maps">Map</string>
    <string name="LaunchLogin">Login</string>
    <string name="LaunchCreate">Create Account</string>
    <string name="or_login">Already have an account?</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City/Town</string>
    <string name="post_hint">Post Code</string>
    <string name="phone_hint">Phone No</string>
    <string name="logout">Logout</string>
    <string name="profile_icon">profile Icon</string>
    <string name="town">Town</string>
    <string name="delete_account">Delete Account</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="prices">Prices</string>
    <string name="add_a_service">+ Add a Service</string>
    <string name="client">Client</string>
    <string name="add_service">New Service Sheet</string>
    <string name="service">Service</string>

    <string name="add_machines">+ Add Machines</string>
    <string name="add_a_client">+ Add a Client</string>
    <string name="add_comment">+ Add Comment</string>
    <string name="comment">Comment</string>
    <string name="location">Location</string>
    <string name="add_location">+ Add Location</string>
    <string name="start_date">Start Date:</string>
    <string name="add_start_date">+ Add Start Date</string>
    <string name="tap_to_add_a_comment">Tap to Add a comment...</string>
    <string name="note">Note</string>
    <string name="calendar">Calendar</string>
    <string name="weather">Weather</string>
    <string name="calender">CALENDER</string>
    <string name="find">Home Address</string>
    <string name="enter_nearest_town">Enter Nearest Town</string>
    <string name="weathertxt">Weather</string>
    <string name="select_service">Select Service</string>
    <string name="mowing">Mowing</string>
    <string name="bale_and_wrap">Bale and Wrap</string>
    <string name="acre">Acre Count</string>
    <string name="to_do">To Do</string>
    <string name="acres">Acres</string>
    <string name="create_your_account">Create your account</string>
    <string name="reset_password">Forgot your password?</string>
    <string name="send">Send</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="reset_your_password">Reset your Password</string>
    <string name="weather_updates">Weather Updates</string>
    <string name="website">FieldGlass Web</string>
    <string name="machines">Machines</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="cost_calculator">Calculator</string>
    <string name="update_service">Update Service</string>
</resources>
