<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/greenback"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">

    <!--only show on login button click-->

    <ProgressBar
        android:id="@+id/create_acc_Progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="361dp"
        android:layout_height="83dp"
        android:tint="#FFFFFF"
        app:srcCompat="@drawable/ic_account"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#444947">

        <LinearLayout
            android:id="@+id/acc_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingBottom="6dp" />

            <EditText
                android:id="@+id/Address_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:paddingBottom="6dp" />

            <EditText
                android:id="@+id/city_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/city_hint"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:paddingBottom="6dp" />

            <EditText
                android:id="@+id/post_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/post_hint"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:paddingBottom="6dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/phone_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingBottom="6dp" />

            <AutoCompleteTextView
                android:id="@+id/email_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:background="@null"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/password_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="6dp"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/create_acc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#f9f9f9"
                android:text="@string/create_text"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:gravity="center_horizontal"
                android:text="@string/or_login"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="#f9f9f9"
                android:text="@string/login_text"
                android:textColor="#4CAF50"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--For mobile users, system serves auto fill-->

    <!--additional details-->

    <!--    end of addition-->


</LinearLayout>



