<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Primary">

    <!--only show on login button click-->
    <ProgressBar
        android:id="@+id/login_Progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <!--For mobile users, system serves auto fill-->
    <AutoCompleteTextView
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/email_sign_in_button"
        android:textColor="@color/colorAccent"
        android:text="@string/login_text"

        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/or_text"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/create_acc_button_login"
        android:textColor="@color/colorAccent"
        android:text="@string/create_text"
        android:background="@android:color/transparent"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>



