<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weatherbck"
    tools:context=".WeatherApp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/weatherToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#444947"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weathertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/weathertxt"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weatherToolbar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabE_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:backgroundTint="#444947"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_close"
        android:focusable="true" />

    <EditText
        android:id="@+id/editTextTown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/enter_nearest_town"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherToolbar" />

    <Button
        android:id="@+id/homeAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="#B5D3E7"
        android:bottomLeftRadius="20dp"
        android:bottomRightRadius="20dp"
        android:elevation="10dp"
        android:padding="15dp"
        android:text="@string/find"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:topLeftRadius="20dp"
        android:topRightRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTown"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="#2ae8ab"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeAddressButton"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/searchAddressButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B5D3E7"
        android:padding="15dp"
        android:text="Search Address"
        android:textColor="#FCFFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/homeAddressButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTown"
        app:layout_constraintVertical_bias="0.56" />
</androidx.constraintlayout.widget.ConstraintLayout>