<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".Select_Service">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Servicebar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#444947"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select_service"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Servicebar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#444947"
        app:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save" />

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="Task"
        android:textColor="@color/colorTextOrange"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Servicebar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvTask"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/radioGroupMow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbMowing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mowing"
                android:textSize="24sp" />

        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView8"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/radioGroupTed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbTedding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tedding"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView7"
        tools:layout_editor_absoluteX="-16dp">

        <RadioGroup
            android:id="@+id/radioGroupRake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbRaking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Raking"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView6"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/radioGroupBale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbBaleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Baling (Small)"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbBaleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Round Bale"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rbBaleWrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bale_and_wrap"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:id="@+id/radioGroupStack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbStack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Stack"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="*Select At Least One Option"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>